# one-spec-five-agents

./: PROVENANCE.md  README.md  STUDY.md
analysis/: antigravity.md  claude-code-sonnet45.md  codex-codexmax.md  droid-sonnet45.md  gemini.md
builds/antigravity/: ROADMAP.md  package-lock.json  package.json
builds/claude-code-sonnet45/: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DOCUMENTATION_UPDATES.md  DROID.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  PROGRESS.md  README.md  ROADMAP.md  SETUP.md  VISION.md  package-lock.json  package.json
builds/codex-codexmax/: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  README.md  ROADMAP.md  VISION.md  package-lock.json  package.json
builds/droid-sonnet45/: .env.example  .gitignore  BETTER_SQLITE3_SUCCESS.md  CLAUDE.md  COMPLETION_SUMMARY.md  DOCUMENTATION_UPDATES.md  (+6 more)
restart/: AGENTS.md  ARCHITECTURE.md  DROID.md  GEMINI.md  README.md  ROADMAP.md  VERSIONS.md  VISION.md
restart/mm-search/: .env.example  AGENTS.md  ARCHITECTURE.md  README.md  VISION.md  pyproject.toml
restart/mm-search/specs/: 06-unified-search.md
restart/mm-server/: .env.example  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  README.md  VISION.md  openapi.yaml  pyproject.toml
restart/mm-server/specs/: 01-project-setup-and-schema.md  02-filesystem-storage.md  03-conversations-as-files.md  04-bubblewrap-execution.md  05-tool-integration.md  05a-adapters.md  05b-message-building.md  05c-turn-orchestration.md  07-system-prompts.md  09-conversation-context-management.md  README.md
spec/: README.md  ROADMAP.md
(+183 files in other folders)
