[project]
name = "mm-server"
version = "0.1.0"
description = "Backend API for Multi-Model Chat"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "openai>=1.12",
    "anthropic>=0.18",
    "pyyaml>=6.0",
    "aiofiles>=23.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
